--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "firebase": "^8.3.2",
+    "firebase-login": "^1.0.0",
+    "firebase-tools": "^9.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.0.4",
